后台添加验证码，多语言，redis。权限包安装

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
 	    "infyomlabs/metronic-templates": "dev-master",
 	    "infyomlabs/swagger-generator": "dev-master",
     	"jlapp/swaggervel": "dev-master",
-    	"doctrine/dbal": "~2.3"
+    	"doctrine/dbal": "~2.3",
+        "mews/captcha": "^2.1",
+        "predis/predis": "^1.1",
+        "bican/roles": "2.1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
