--- a/composer.json
+++ b/composer.json
@@ -5,18 +5,18 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
-        "infyomlabs/laravel-generator": "5.3.x-dev",
+      "php": ">=5.6.4",
+      "laravel/framework": "5.3.*",
+      "infyomlabs/laravel-generator": "5.3.x-dev",
 	    "laravelcollective/html": "dev-master",
 	    "infyomlabs/metronic-templates": "dev-master",
 	    "infyomlabs/swagger-generator": "dev-master",
     	"jlapp/swaggervel": "dev-master",
-    	"doctrine/dbal": "~2.3",
-        "mews/captcha": "^2.1",
-        "predis/predis": "^1.1",
-        "bican/roles": "2.1.*",
-        "yajra/laravel-datatables-oracle": "~6.0"
+  	  "doctrine/dbal": "~2.3",
+      "mews/captcha": "^2.1",
+      "predis/predis": "^1.1",
+      "yajra/laravel-datatables-oracle": "~6.0",
+      "spatie/laravel-permission": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
