--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,10 @@
     "require": {
       "php": ">=5.6.4",
       "laravel/framework": "5.3.*",
-      "infyomlabs/laravel-generator": "5.3.x-dev",
-	    "laravelcollective/html": "dev-master",
-	    "infyomlabs/metronic-templates": "dev-master",
-	    "infyomlabs/swagger-generator": "dev-master",
-    	"jlapp/swaggervel": "dev-master",
-  	  "doctrine/dbal": "~2.3",
       "mews/captcha": "^2.1",
       "predis/predis": "^1.1",
-      "yajra/laravel-datatables-oracle": "~6.0",
-      "spatie/laravel-permission": "^1.5"
+      "spatie/laravel-permission": "^1.5",
+        "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
